Beta create entries: fix toolbar item spacing
Without JS there's no icons, so it runs together into "create poll settings."
Also, include the assumed text-align: right for lynx.

--- a/htdocs/scss/pages/entry/new.scss
+++ b/htdocs/scss/pages/entry/new.scss
@@ -419,6 +419,12 @@
     padding-bottom: 0.2em;
     padding-top: 0.2em;
     border-bottom: none;
+    text-align: right;
+
+    & > * {
+        display: inline-block;
+        margin-left: 1.25rem;
+    }
 
     a {
         text-decoration: none;
